04-built-in-resource-types/GatewayAPI/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-minimal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod-minimal
  template:
    metadata:
      labels:
        app: nginx-pod-minimal
    spec:
      containers:
        - name: nginx
          image: nginx:1.20.0
